--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
+  "dependencies": 
+  {
     "discord.js": "11.1.0",
   }
 }
