--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": 
-  {
+  "dependencies": {
     "discord.js": "11.1.0",
-  }
+  },
 }
